# OmniLingo

./: .env.example  .gitignore  01-product-overview.md  02-features-and-learning-modules.md  03-high-level-architecture.md  04-microservices-breakdown.md  05-data-model.md  06-tech-stack.md  07-ai-ml-services.md  08-infrastructure-and-deployment.md  09-security-and-compliance.md  10-subscription-and-monetization.md  11-learning-paths-and-curriculum.md  12-observability-and-sre.md  13-roadmap-and-phasing.md  AGENTS.md  CLAUDE.md  FRONTEND-BACKEND-INTEGRATION-PLAN.md  FRONTEND-BACKEND-STANDARDS.md  README.md  WEB-IMPLEMENTATION-STATUS.md  WEB-PAGES-SUMMARY.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-mvp.sh  stop-mvp.sh
services/content/scripts/: .gitignore  Dockerfile  Makefile  publish.py  pyproject.toml
services/content/scripts/common/: content_api.py  lesson_factory.py  llm_client.py  schema.py  tts_client.py  vocab_query.py
services/content/scripts/drafts/english_a1_for_vi/: greetings_classroom_greetings.draft.json  greetings_goodbye.draft.json  greetings_hello_basics.approved.json  greetings_hello_basics.approved.published.json  greetings_hello_basics.draft.json  greetings_how_are_you.approved.json  greetings_how_are_you.approved.published.json  greetings_how_are_you.draft.json  greetings_introducing_yourself.approved.json  greetings_introducing_yourself.approved.published.json  greetings_introducing_yourself.draft.json  (+3 more)
services/content/scripts/generators/: audio.py  gen_track.py  gen_unit.py  skeleton.py  validator.py
services/content/scripts/prompts/: exercise_arrange.md  exercise_dictation.md  exercise_fib.md  exercise_match.md  exercise_mc.md  lesson_intro.md
services/content/scripts/tracks/: english_a1_for_vi.yaml
services/srs/: .env.example  .gitignore  Cargo.toml  Dockerfile
services/srs/migrations/: 00001_init_schema.sql
services/srs/src/: config.rs  main.rs  metrics.rs
services/srs/src/auth_middleware/: auth.rs
services/srs/src/domain/: fsrs.rs  mod.rs  models.rs
services/srs/src/handlers/: due.rs  mod.rs  schedule.rs
services/srs/src/kafka/: consumer.rs  mod.rs  outbox.rs
services/srs/src/repository/: cache.rs  db.rs
services/vocabulary/scripts/: Makefile  common.py  download.sh  enrich_vn_translations.py  import_cedict.py  import_jmdict.py  import_viwiktionary.py  import_wordnet.py  pyproject.toml
(+643 files in other folders)
