[package]
name = "srs-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "srs-service"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "request-id", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono", "migrate"] }

# Redis
deadpool-redis = "0.18"
redis = { version = "0.27", features = ["tokio-comp"] }

# JWT verification
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Kafka consumer
rdkafka = { version = "0.37", features = ["tokio"] }

# UUID & time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Prometheus metrics
prometheus = { version = "0.13", features = ["process"] }
axum-prometheus = "0.7"

# Error handling
thiserror = "2"
anyhow = "1"

# Async utilities
futures = "0.3"
once_cell = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
