[project]
name = "omnilingo-vocabulary-importers"
version = "0.1.0"
description = "Offline dictionary import tools for OmniLingo vocabulary-service"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.30,<1",
  "asyncpg>=0.29,<1",
  "httpx>=0.27,<1",
  "lxml>=5,<6",
  "wn>=0.9,<1",        # Open English WordNet API
  "wordfreq>=3,<4",    # EN frequency ranking
]

[tool.ruff]
line-length = 100
target-version = "py311"
